--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,253 @@
+/* Universal Styles */
+
 html {
   font-size: 18px;
-  line-height: 1.4px;
+  background-color: white;
 }
 
 body {
-  font-family: Helvetica;
+  font-family: Helvetica, sans-serif;
+  line-height: 1.4rem;
+}
+
+.container {
+  max-width: 960px;
+  margin: auto;
+}
+
+.headline {
+  display: flex;
+}
+
+/* Header */
+
+header {
+  background-image: url("../images/glasses-bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 30rem;
+  padding-top: 1rem;
+}
+
+nav {
+  background-color: cadetblue;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.mobile-nav {
+  display: none;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+nav .banner {
+  display: flex;
+  align-items: center;
+  height: 3rem;
+}
+
+.banner img {
+  height: 1.5rem;
+  margin-left: 2rem;
+  margin-right: 1rem;
+}
+
+.banner span {
+  padding: 1rem 0;
+}
+
+.menu span {
+  padding-right: 2rem;
+}
+
+header .headline {
+  justify-content: flex-end;
+}
+
+.main-headline {
+  background-color: white;
+  padding: 1.5rem 5rem;
+  display: inline-block;
+  margin-top: 10rem;
+  margin-right: -2rem;
+  line-height: 1.2rem;
+}
+
+.main-headline h1 {
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+@media only screen and (max-width: 1024px) {
+  nav.container {
+    max-width: 100%;
+  }
+
+  header {
+    height: 22rem;
+    padding-top: 0rem;
+  }
+
+  .main-headline {
+    margin-top: 5rem;
+    margin-right: 2rem;
+    padding: .75rem 4rem;
+  }
+
+  .main-headline h1 {
+    font-size: 1.33rem;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .menu {
+    display: none;
+  }
+
+  .mobile-nav {
+    display: block;
+    margin-right: 2rem;
+  }
+
+  .mobile-nav span {
+    padding: 1rem 0;
+  }
+}
+
+@media only screen and (max-width: 560px) {
+  header {
+    height: 17rem;
+    background-position: 20%;
+  }
+
+  .banner span {
+    display: none;
+  }
+
+  .main-headline {
+    width: 100%;
+    margin: 9rem auto 0 auto;
+    text-align: center;
+  }
+
+  .main-headline h1 {
+    font-size: 1rem;
+    padding: 0 1rem;
+  }
+}
+
+/* Supporting Section */
+
+.supporting {
+  display: flex;
+  justify-content: center;
+}
+
+@media only screen and (max-width: 560px) {
+  .supporting {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 3rem;
+  }
+}
+
+/* Services Section */
+
+.service {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  margin: 3rem;
+  width: 5rem;
+  height: 8rem;
+}
+
+.service img {
+  width: 5rem;
+  margin-bottom: 1rem;
+}
+
+img.paper {
+  width: 3.5rem;
+}
+
+@media only screen and (max-width: 560px) {
+  .service {
+    height: auto;
+    margin: .77rem;
+  }
+
+  .service span {
+    font-size: .77rem;
+  }
+}
+
+/* Info Section */
+
+.info {
+  width: 35%;
+  margin-right: 5%;
+  margin-bottom: 5rem;
+}
+
+.title {
+  background-color: cadetblue;
+  width: 10rem;
+  padding: .5rem 0 .5rem 1.25rem;
+  color: white;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+@media only screen and (max-width: 560px) {
+  .info {
+    width: 100%;
+    margin-bottom: 3rem;
+    margin-right: 0;
+  }
+
+  .info .title {
+    width: 100%;
+    max-width: none;
+    margin-right: 0;
+    text-align: center;
+  }
+
+  .info p {
+    font-size: .77rem;
+    margin: 1rem;
+  }
+}
+
+/* Footer Section */
+
+footer {
+  background-color: azure;
+  display: flex;
+  align-items: center;
+}
+
+footer img {
+  height: 1.5rem;
+  padding: 4rem 1rem 4rem 4rem;
+}
+
+@media only screen and (max-width: 560px) {
+  footer {
+    justify-content: center;
+  }
+
+  footer span {
+    display: none;
+  }
 }
